# kinesis-s3-logger

./: .gitignore  .mise.toml  README.md
applications/test_lambda/: .gitignore  Taskfile.yml  pyproject.toml
applications/test_lambda/src/my_logger/: exceptions.py  factory.py  interfaces.py  kinesis_client.py  logger.py  logger_factory.py  models.py  protocols.py
applications/test_lambda/src/my_logger/formatter/: json_formatter.py
applications/test_lambda/src/my_logger/writer/: console_writer.py  kinesis_writer.py
applications/test_lambda/src/test_lambda/: handler.py
applications/test_lambda/tests/: conftest.py
applications/test_lambda/tests/my_logger/: test_kinesis_client.py  test_kinesis_writer.py  test_logger.py  test_models.py
applications/test_lambda/tests/my_logger/formatter/: test_formatter.py
applications/test_lambda/tests/test_lambda/: test_handler.py
terraform/: .gitignore  Taskfile.yml
terraform/environments/dev/: main.tf
terraform/modules/log_infrastructure/: athena.tf  glue.tf  kinesis.tf  lambda.tf  s3.tf  variables.tf
